--- a/B2BApp.Web/Views/Tedarikci/Index.cshtml
+++ b/B2BApp.Web/Views/Tedarikci/Index.cshtml
@@ -5,20 +5,20 @@
 
 <div class="container">
 
-    <h2>Tedarikciler</h2>
+    <h2>Firmalar</h2>
     <hr />
 
     <div class="" style="display: flex;justify-content: flex-end;">
-        <button class="btn btn-success" onclick="Save()"><i class="bi bi-plus"></i> Yeni Tedarikci</button>
+        <button class="btn btn-success" onclick="Save()"><i class="bi bi-plus"></i> Yeni Firma</button>
 
     </div>
     <br />
 
 
-    <table id="tedarikciTable" class="display" style="width:100%"> 
+    <table id="firmaTable" class="display" style="width:100%"> 
         <thead>
             <tr>
-                <th>Tedarikci Adi</th>
+                <th>Firma Adi</th>
                 <th>Telefon</th>
                 <th></th>
             </tr>
@@ -33,22 +33,22 @@
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
-        <h5 id="offcanvasRightLabel">Tedarikci Güncelle</h5>
+        <h5 id="offcanvasRightLabel">Firma Güncelle</h5>
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" id="dismissBUton"></button>
     </div>
     <div class="offcanvas-body">
-        <label type="text" id="tedarikciId" value="" hidden></label>
+        <label type="text" id="firmaId" value="" hidden></label>
 
         <br />
-        <label for="tedarikciIsim" class="form-label">Tedarikci</label>
-        <input type="text" id="tedarikciIsim" class="form-control" value=""> 
+        <label for="firmaIsim" class="form-label">Firma</label>
+        <input type="text" id="firmaIsim" class="form-control" value=""> 
        
-        <label for="tedarikciTelUpdate" class="form-label">Telefon</label>
-        <input type="text" id="tedarikciTelUpdate" class="form-control" value="">
+        <label for="firmaTelUpdate" class="form-label">Telefon</label>
+        <input type="text" id="firmaTelUpdate" class="form-control" value="">
 
         <br />
         <div style="display: flex;justify-content: flex-end;">
-            <button onclick=updateTedarikci() class="btn btn-secondary">Güncelle</button>
+            <button onclick=updateFirma() class="btn btn-secondary">Güncelle</button>
         </div>
     </div>
 </div>
@@ -58,30 +58,29 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<link rel="stylesheet" href="" />
 <script type="text/javascript">
     let table;
 
     $(document).ready(function loadTable() {
-        table = $('#tedarikciTable').DataTable({
+        table = $('#firmaTable').DataTable({
             "language": {
                 url: '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json',
             },
 
             "ajax":
             {
-                "url": "https://localhost/api/Tedarikci/all"
+                "url": "https://localhost/api/firma/all"
             },
 
             "columns": [
-                { "data": 'tedarikciAdi' },
-                { "data": 'tedarikciTel' },
+                { "data": 'firmaAdi' },
+                { "data": 'firmaTel' },
                 {
                     "data": "id",
                     "render": function (data) {
                         return `
                                       <div class="w-75 btn-group" role="group">
-                                          <a onClick=getTedarikciInfo("${data}") class="btn btn-primary mx-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"></i>Edit</a>
+                                              <a onClick=getFirmaInfo("${data}") class="btn btn-primary mx-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"></i>Edit</a>
                                           <a onClick=Delete("${data}") class="btn btn-danger mx-2"><i class="bi bi-trash"></i>Delete</a>
                                       </div>`
                     },
@@ -92,10 +91,10 @@
     });
 
 
-    function getTedarikciInfo(data) {
+    function getFirmaInfo(data) {
 
         $.ajax({
-            url: 'https://localhost/api/Tedarikci',
+            url: 'https://localhost/api/Firma',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain'
@@ -106,32 +105,32 @@
         }).done(function (response) {
             if (response != null) {
                 // getirilen verilerin gerekli yerlere atanması
-                $("#tedarikciIsim").val(response.data.tedarikciAdi);
-                $("#tedarikciTelUpdate").val(response.data.tedarikciTel);
-                $("#tedarikciId").val(response.data.id);
+                $("#firmaIsim").val(response.data.firmaAdi);
+                $("#firmaTelUpdate").val(response.data.firmaTel);
+                $("#firmaId").val(response.data.id);
 
             }
         })
     }
 
-    function updateTedarikci() {
-        let yeniTedarikciAdi = $("#tedarikciIsim").val();
-        let yeniTedarikciTel = $("#tedarikciTelUpdate").val();
-        let id = $("#tedarikciId").val();
+    function updateFirma() {
+        let yeniFirmaAdi = $("#firmaIsim").val();
+        let yeniFirmaTel = $("#firmaTelUpdate").val();
+        let id = $("#firmaId").val();
 
         $.ajax({
-            url: 'https://localhost/api/Tedarikci?tedarikciId=' + id,
+            url: 'https://localhost/api/Firma?firmaId=' + id,
             crossDomain: true,
             method: 'put',
             headers: {
                 'accept': 'text/plain'
             },
             contentType: 'application/json',
-            // data: '{\n  "id": "6673db08b965b70719edb1fb",\n  "tedarikciAdi": "string"\n}',
+            // data: '{\n  "id": "6673db08b965b70719edb1fb",\n  "firmaAdi": "string"\n}',
             data: JSON.stringify({
                 'id': id,
-                'tedarikciAdi': yeniTedarikciAdi,
-                'tedarikciTel': yeniTedarikciTel
+                'firmaAdi': yeniFirmaAdi,
+                'firmaTel': yeniFirmaTel
             })
         }).done(function (response) {
 
@@ -140,7 +139,7 @@
             table.ajax.reload();
 
             Swal.fire({
-                title: "Tedarikci Güncellendi",
+                title: "Firma Güncellendi",
                 icon: "success"
             });
 
@@ -163,7 +162,7 @@
                 console.log(data);
 
                 $.ajax({
-                    url: 'https://localhost/api/Tedarikci?id=' + data,
+                    url: 'https://localhost/api/Firma?id=' + data,
                     crossDomain: true,
                     method: 'delete',
                     headers: {
@@ -176,13 +175,13 @@
                         table.ajax.reload();
 
                         Swal.fire({
-                            title: "Tedarikci Silindi",
+                            title: "Firma Silindi",
                             icon: "success"
                         });
                     }
                     else {
                         Swal.fire({
-                            title: "Tedarikci Silinirken Bir Sorun Oluştu",
+                            title: "Firma Silinirken Bir Sorun Oluştu",
                             icon: "error"
                         });
                     }
@@ -193,85 +192,53 @@
 
     function Save() {
         swal.fire({
-            title: 'Ekle',
+            title: 'Multiple inputs',
             html:
-                '<label for="tedarikciIsimEkle" class="form-label">Tedarikci Adı</label> <input type="text" id="tedarikciIsimEkle" class= "form-control" value="">' +
-                '<label for="tedarikciTel" class="form-label">Telefon</label> <input type="text" id="tedarikciTel" class= "form-control" value="">',
+                '<label for="firmaIsimEkle" class="form-label">Firma Adı</label> <input type="text" id="firmaIsimEkle" class= "form-control" value="">' +
+                '<label for="firmaTel" class="form-label">Telefon</label> <input type="text" id="firmaTel" class= "form-control" value="">',
 
             preConfirm: function () {
                 return new Promise(function (resolve) {
                     
                     resolve([
-                        $('#tedarikciIsimEkle').val(),
-                        $('#tedarikciTel').val()
+                        $('#firmaIsimEkle').val(),
+                        $('#firmaTel').val()
                     ])
                 })
             },
-
+            onOpen: function () {
+                $('#swal-input1').focus()
+            }
         }).then((result) => {
             console.log(result);
 
 
             if (result.isConfirmed) {
                 $.ajax({
-                    url: 'https://localhost/api/Tedarikci',
+                    url: 'https://localhost/api/Firma',
                     crossDomain: true,
                     method: 'post',
                     headers: {
                         'accept': 'text/plain'
                     },
                     contentType: 'application/json',
-                    // data: '{\n  "id": "",\n  "tedarikciAdi": "Tedarikci-1",\n  "tedarikciTel": "5312854868"\n}',
                     data: JSON.stringify({
                         'id': '',
-                        'tedarikciAdi': $('#tedarikciIsimEkle').val(),
-                        'tedarikciTel': $('#tedarikciTel').val(),
+                        'firmaAdi': $('#firmaIsimEkle').val(),
+                        'firmaTel': $('#firmaTel').val(),
                     })
                 }).done(function (response) {
                     if (response != null) {
                         //Reload/redraw the table with new data
                         table.ajax.reload();
-                        debugger;
+
                         //table = loadTable(); // Yeni tablo oluştur
                         Swal.fire({
-                            title: "Tedarikci Eklendi",
+                            title: "Firma Eklendi",
                             icon: "success"
                         });
                     }
                 });
-
-
-
-                // $.ajax({
-                //     url: 'https://localhost/api/Tedarikci',
-                //     crossDomain: true,
-                //     method: 'post',
-                //     headers: {
-                //         'accept': 'text/plain'
-                //     },
-                //     contentType: 'application/json',
-                //     // data: '{"tedarikciAdi": "Tedarikci-12"\n}',
-                //     data: JSON.stringify({
-                //         'tedarikciAdi': result.value,
-                //         'id': ''
-                //     })
-
-                // }).done(function (response) {
-                    // if (response != null) {
-                    //     //Reload/redraw the table with new data
-                    //     table.ajax.reload();
-
-                    //     table = loadTable(); // Yeni tablo oluştur
-                    //     Swal.fire({
-                    //         title: "Tedarikci Eklendi",
-                    //         icon: "success"
-                    //     });
-                    // }
-                // });
-
-
-
-
 
 
             }
