--- a/B2BApp.Web/Views/Kategori/Index.cshtml
+++ b/B2BApp.Web/Views/Kategori/Index.cshtml
@@ -65,9 +65,8 @@
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.datatables.net/2.0.8/js/dataTables.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.css" />
+<link rel="stylesheet" href="" />
 <script type="text/javascript">
     let table;
     $(document).ready(function loadTable() {
