--- a/B2BApp.Web/Views/Urun/Index.cshtml
+++ b/B2BApp.Web/Views/Urun/Index.cshtml
@@ -15,12 +15,12 @@
     <br />
 
 
-    <table id="urunTable" class="display" style="width:100%">
+    <table id="urunTable" class="display nowrap" style="width:100%">
         <thead>
             <tr>
                 <th>Urun</th>
-                <th>Fiyat</th>
-                <th>Kategori</th>
+                
+                <th>Kategori</th><th>Fiyat</th>
                 <th></th>
             </tr>
         </thead>
@@ -65,9 +65,9 @@
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.datatables.net/2.0.8/js/dataTables.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.css" />
+
+
 @* select2 kullanımı *@
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.8/js/select2.min.js" defer></script>
@@ -82,9 +82,12 @@
     $(document).ready(function loadTable() {
         
         table = $('#urunTable').DataTable({
-            "language": {
-                url: '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json',
-            },
+            layout: {
+        topStart: {
+            buttons: ['excel', 'pdf', 'print']
+        }
+    },
+
             "ajax":
             {
                 "url": "https://localhost/api/Urun/GetUrunlerWithKategori"
@@ -92,8 +95,8 @@
 
             "columns": [
                 { "data": 'urunAdi' },
-                { "data": 'fiyat' },
                 { "data": 'kategori.kategoriAdi' },
+                                { "data": 'fiyat' },
 
                 {
                     "data": "id",
