--- a/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
@@ -34,6 +34,11 @@
     <!-- RTL Css -->
     <link rel="stylesheet" href="~/HopeUi-Dashboard/assets/css/rtl.min.css" />
 
+    <!-- DataTable Css -->
+    <link href="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-2.0.8/b-3.0.2/b-colvis-3.0.2/b-html5-3.0.2/b-print-3.0.2/datatables.min.css" rel="stylesheet">
+
+
+
 
 </head>
 <body class="  ">
@@ -532,6 +537,10 @@
     <script src="~/HopeUi-Dashboard/assets/js/hope-ui.js" defer></script>
 
 
+    <!-- DataTable Script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-2.0.8/b-3.0.2/b-colvis-3.0.2/b-html5-3.0.2/b-print-3.0.2/datatables.min.js"></script>
 
 </body>
 </html>
