--- a/B2BApp.Web/Views/Urun/Index.cshtml
+++ b/B2BApp.Web/Views/Urun/Index.cshtml
@@ -1,11 +1,10 @@
-﻿@{    
+﻿@{
     Layout = "~/Views/Shared/_DashboardLayout.cshtml";
 }
 
 <div class="container">
 
     <h2>Urunler</h2>
-    <hr />
 
     <div class="" style="display: flex;justify-content: flex-end;">
         <button class="btn btn-success" onclick="Save()"><i class="bi bi-plus"></i> Yeni Urun</button>
@@ -18,9 +17,11 @@
         <thead>
             <tr>
                 <th>Urun</th>
-                
-                <th>Kategori</th><th>Fiyat</th>
-                <th></th>
+                <th>Tedarikci</th>
+
+                <th>Kategori</th>
+                <th>Fiyat</th>
+                <th class=""></th>
             </tr>
         </thead>
     </table>
@@ -31,7 +32,7 @@
 
 @* right drawer *@
 
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel" >
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel">Urun Güncelle</h5>
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" id="dismissButton"></button>
@@ -41,17 +42,23 @@
 
         <br />
         <div class="form-group">
-        <label for="urunIsim" class="form-label">Urun</label>
-        <input type="text" id="urunIsim" class="form-control" value="" >
+            <label for="urunIsim" class="form-label">Urun</label>
+            <input type="text" id="urunIsim" class="form-control" value="">
         </div>
         <div class="form-group">
-            <label for="urunFiyat" class="form-label">Urun</label>
-            <input type="text" id="urunFiyat" class="form-control" value="">
+            <label for="urunFiyat" class="form-label">Fiyat</label>
+            <input type="number" id="urunFiyat" class="form-control" value="">
         </div>
 
+        <div class="input-group">
+            <label for="categorySelectDrawer" class="form-label">Kategori</label> <select id="categorySelectDrawer" class="select2" placeholder='select item'></select>
+        </div>
+        <br />
 
-        <label for="categorySelectDrawer" class="form-label">Kategori</label> <select id="categorySelectDrawer" class="select2" placeholder='select item'></select>
+        <div class="input-group">
 
+            <label for="tedarikciSelectDrawer" class="form-label">Tedarikci</label> <select id="tedarikciSelectDrawer" class="select2" placeholder='select item'></select>
+        </div>
 
         <br />
         <div style="display: flex;justify-content: flex-end;">
@@ -63,51 +70,61 @@
 
 
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-
-@* select2 kullanımı *@
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.8/js/select2.min.js" defer></script>
-
-
-
 <script type="text/javascript">
     let table;
 
-
     //datatable
     $(document).ready(function loadTable() {
-        
-            table = $('#urunTable').DataTable({
-            "language": {
-                url: '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json',
-            },
-            "layout": {
-                topStart: {
-                    buttons: ['excel', 'pdf', 'print']
-                }
-            },
 
+        table = $('#urunTable').DataTable({
             "ajax":
             {
                 "url": "https://localhost/api/Urun/GetUrunlerWithKategori"
             },
 
+            "language": {
+                url: '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json',
+            },
+            "layout": {
+                "topStart": {
+                    "buttons": [
+
+                        {
+                            "extend": 'excelHtml5',
+                            "exportOptions": {
+                                "columns": [0, 1, 2, 3],
+                                "title": "bura başlık"
+
+                            }
+                        },
+                        {
+                            "extend": 'pdfHtml5',
+                            "exportOptions": {
+                                "columns": [0, 1, 2, 3],
+                                "title": "Bura Başlık",
+                                "text": "asdasdasd"
+                            }
+                        },
+                        'colvis'
+                    ]
+                }
+
+            },
+
             "columns": [
                 { "data": 'urunAdi' },
+                { "data": 'tedarikci.tedarikciAdi' },
                 { "data": 'kategori.kategoriAdi' },
-                                { "data": 'fiyat' },
-
+                { "data": 'fiyat' },
                 {
                     "data": "id",
+                    "className": "noExport",
                     "render": function (data) {
                         return `
-                                          <div class="w-75 btn-group" role="group">
-                                                  <a onClick=getUrunInfo("${data}") class="btn btn-primary mx-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"></i>Edit</a>
-                                              <a onClick=Delete("${data}") class="btn btn-danger mx-2"><i class="bi bi-trash"></i>Delete</a>
-                                          </div>`
+                                                  <div class="w-75 btn-group" role="group">
+                                                          <a onClick=getUrunInfo("${data}") class="btn btn-primary mx-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"></i>Edit</a>
+                                                      <a onClick=Delete("${data}") class="btn btn-danger mx-2"><i class="bi bi-trash"></i>Delete</a>
+                                                  </div>`
                     },
                     "width": "20%"
                 },
@@ -115,10 +132,8 @@
         });
     });
 
-
     function getUrunInfo(data) {
-        getCategoriesUpdate();
-
+        getDataUpdate();
 
         $.ajax({
             url: 'https://localhost/api/Urun/GetUrunWithKategori',
@@ -134,9 +149,10 @@
                 // getirilen verilerin gerekli yerlere atanması
                 $("#urunIsim").val(response.data.urunAdi);
                 $("#categorySelectDrawer").val(response.data.kategori.id).trigger('change');
+                $("#tedarikciSelectDrawer").val(response.data.kategori.id).trigger('change');
                 $("#urunId").val(response.data.id);
                 $("#urunFiyat").val(response.data.fiyat);
-                    
+                debugger;
 
             }
         })
@@ -146,8 +162,9 @@
         let yeniUrunAdi = $("#urunIsim").val();
         let yeniUrunFiyat = $("#urunFiyat").val();
         let yeniKategoriId = $("#categorySelectDrawer").val();
+        let yeniTedarikciId = $("#tedarikciSelectDrawer").val();
         let id = $("#urunId").val();
-        
+
 
         $.ajax({
             url: 'https://localhost/api/Urun?urunId=' + id,
@@ -160,6 +177,7 @@
             data: JSON.stringify({
                 'id': id,
                 'kategoriId': yeniKategoriId,
+                'tedarikciId': yeniTedarikciId,
                 'urunAdi': yeniUrunAdi,
                 'fiyat': yeniUrunFiyat
             })
@@ -227,23 +245,20 @@
             title: 'Uun Ekle',
             html:
                 `<label for="urunIsimEkle" class="form-label">Urun</label> <input type="text" id="urunIsimEkle" class= "form-control" value="" required>
-                 <label for= "urunFiyatEkle" class= "form-label">Fiyat</label> <input type="number" id = "urunFiyatEkle" class= "form-control" value = "" required>                <br/>
-                 <label for="categorySelectSave" class= "form-label">Kategori</label> <select id="categorySelectSave" class="select2" placeholder='select item'></select>
-                    `,
-            preConfirm: function () {
-                return new Promise(function (resolve) {
+                     <label for= "urunFiyatEkle" class= "form-label">Fiyat</label> <input type="number" id = "urunFiyatEkle" class= "form-control" value = "" required>
+                     <br/>
+                     <label for="categorySelectSave" class= "form-label">Kategori</label> <select id="categorySelectSave" class="select2" placeholder='select item'></select>
+                     <br/>
+                     <br/>
+                     <label for="tedarikciSelectSave" class= "form-label">Tedarikci</label> <select id="tedarikciSelectSave" class="select2" placeholder='select item'></select>
 
-                    resolve([
-                        $('#urunIsimEkle').val(),
-                        $('#categorySelectSave').val(),
-                            $('#urunFiyatEkle').val()
-                    ])
-                })
-            },
+                     `,
+
+
             onOpen: function () {
                 $('#swal-input1').focus()
             },
-            didOpen: getCategories(),
+            didOpen: getDatasSave(),
         }).then((result) => {
             console.log(result);
 
@@ -262,6 +277,7 @@
                         'id': '',
                         'urunAdi': $('#urunIsimEkle').val(),
                         'kategoriId': $('#categorySelectSave').val(),
+                        'tedarikciId': $('#tedarikciSelectSave').val(),
                         'fiyat': $('#urunFiyatEkle').val(),
                     })
                 }).done(function (response) {
@@ -281,7 +297,7 @@
         });
     }
 
-    function getCategories(){
+    function getDatasSave() {
         // categorySelectSave
         $.ajax({
             url: 'https://localhost/api/Kategori/all',
@@ -296,7 +312,6 @@
                     text: data.kategoriAdi
                 };
             });
-            console.log(result);
             $("#categorySelectSave").select2({
                 placeholder: "Choose a person attending todays meeting",
                 data: result,
@@ -305,9 +320,33 @@
 
             });
         });
+
+        // TedarikciSelectSave
+        $.ajax({
+            url: 'https://localhost/api/tedarikci/all',
+            crossDomain: true,
+            headers: {
+                'accept': 'text/plain'
+            }
+        }).done(function (response) {
+            result = $.map(response.data, function (data) {
+                return {
+                    id: data.id,
+                    text: data.tedarikciAdi
+                };
+            });
+            console.log(result);
+            $("#tedarikciSelectSave").select2({
+                placeholder: "Choose a person attending todays meeting",
+                data: result,
+                dropdownParent: $('.swal2-container'), // dropdownParent olarak SweetAlert2 konteynerini belirtin
+                width: 200,
+
+            });
+        });
     }
-      
-    function getCategoriesUpdate(){
+
+    function getDataUpdate() {
         // categorySelectSave
         $.ajax({
             url: 'https://localhost/api/Kategori/all',
@@ -327,11 +366,38 @@
             $("#categorySelectDrawer").select2({
                 placeholder: "Choose a person attending todays meeting",
                 data: result,
-                
+
                 width: 200,
 
             });
         });
+
+        // tedarikciSelectSave
+        $.ajax({
+            url: 'https://localhost/api/tedarikci/all',
+            crossDomain: true,
+            headers: {
+                'accept': 'text/plain'
+            }
+        }).done(function (response) {
+            result = $.map(response.data, function (data) {
+                console.log()
+                return {
+                    id: data.id,
+                    text: data.tedarikciAdi
+                };
+            });
+            console.log(result);
+            $("#tedarikciSelectDrawer").select2({
+                placeholder: "Tedarikci Seçin",
+                data: result,
+
+                width: 200,
+
+            });
+        });
+
+
     }
 
 
