--- a/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
@@ -509,7 +509,8 @@
     </main>
 
 
-   
+   <!--Chart Script-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 
     <!-- Library Bundle Script -->
