--- a/B2BApp.Web/Views/SubeStok/Index.cshtml
+++ b/B2BApp.Web/Views/SubeStok/Index.cshtml
@@ -34,7 +34,7 @@
 <div  class="offcanvas offcanvas-end" tabindex="-1" id="Ekleme" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel">Offcanvas right</h5>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" id="eklemeClose"></button>
     </div>
     <div class="offcanvas-body">
 
@@ -76,7 +76,7 @@
  <div class="offcanvas offcanvas-end" tabindex="-1" id="Guncelleme" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel">Offcanvas right</h5>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" id="dismissButton"></button>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" id="updateClose"></button>
     </div>
     <div class="offcanvas-body">
 
@@ -220,6 +220,7 @@
             })
         }).done(function (response) {
             if (response != null) {
+                $("eklemeClose").click();
                 //Reload/redraw the table with new data
                 table.ajax.reload();
 
@@ -376,7 +377,7 @@
             })
         }).done(function (response) {
 
-            $("#dismissButton").click()
+            $("#updateClose").click()
             //Reload/redraw the table with new data
             table.ajax.reload();
 
