--- a/B2BApp.Web/Views/Home/Index.cshtml
+++ b/B2BApp.Web/Views/Home/Index.cshtml
@@ -3,19 +3,23 @@
     Layout = "~/Views/Shared/_DashboardLayout.cshtml";
 }
 
-<div class="text-center">
+<div class="container">
 
-    <div class="row">
+    <div class="row" style="--bs-gutter-x: 0rem;">
         <div class="col-md-6">
             <div>
-                <canvas id="myChart"></canvas>
+                <canvas id="barChart"></canvas>
+            </div>
+        </div> 
+        <div class="col-md-6">
+            <div>
+				<canvas id="pieChart" style="width: 375px;height: 375px;" width="375" height="375"></canvas>
             </div>
         </div>
-        <div class="col-md-6">
-            <div class="p-3 border bg-light">Column 2</div>
-        </div>
     </div>
-    <div class="row">
+	<br />
+	<br />
+    <div class="row" style="--bs-gutter-x: 0rem;">
         <div class="col-md-12">
             <div class="p-3 border bg-light">Column 3</div>
         </div>
@@ -26,26 +30,108 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <script type="text/javascript">
-    const ctx = document.getElementById('myChart');
+	const ctxBar = document.getElementById('barChart');
+	const ctxPie = document.getElementById('pieChart');
+	ctxPie.width = 300;
+	ctxPie.height = 300;
 
-    new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-            datasets: [{
-                label: '# of Votes',
-                data: [12, 19, 3, 5, 2, 3],
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                y: {
-                    beginAtZero: true
-                }
-            }
-        }
-    });
+
+	new Chart(ctxBar, {
+		type: 'bar',
+		data: {
+			labels: ["Ocak", "Şubat", "Mart", "Nisan", "Mayıs", "Haziran", "Temmuz", "Ağustos", "Eylül", "Ekim", "Kasım", "Aralık"],
+			datasets: [{
+				label: 'Toplam Satış',
+				data: [1000, 1200, 1500, 1100, 1300, 1700, 1400, 1600, 1800, 1900, 2000, 2200],
+				borderWidth: 2,
+				backgroundColor: [
+					'rgba(255, 99, 132, 0.2)',
+					'rgba(54, 162, 235, 0.2)',
+					'rgba(255, 206, 86, 0.2)',
+					'rgba(75, 192, 192, 0.2)',
+					'rgba(153, 102, 255, 0.2)',
+					'rgba(255, 159, 64, 0.2)',
+					'rgba(255, 99, 132, 0.2)',
+					'rgba(54, 162, 235, 0.2)',
+					'rgba(255, 206, 86, 0.2)',
+					'rgba(75, 192, 192, 0.2)',
+					'rgba(153, 102, 255, 0.2)',
+					'rgba(255, 159, 64, 0.2)'
+				],
+				borderColor: [
+					'rgba(255, 99, 132, 1)',
+					'rgba(54, 162, 235, 1)',
+					'rgba(255, 206, 86, 1)',
+					'rgba(75, 192, 192, 1)',
+					'rgba(153, 102, 255, 1)',
+					'rgba(255, 159, 64, 1)',
+					'rgba(255, 99, 132, 1)',
+					'rgba(54, 162, 235, 1)',
+					'rgba(255, 206, 86, 1)',
+					'rgba(75, 192, 192, 1)',
+					'rgba(153, 102, 255, 1)',
+					'rgba(255, 159, 64, 1)'
+				],
+			}]
+		},
+		options: {
+			scales: {
+				y: {
+					beginAtZero: true
+				}
+			}
+		}
+	});
+
+	new Chart(ctxPie, {
+		type: 'doughnut',
+		data: {
+			labels: ["Ürün1", "Ürün2", "Ürün3", "Ürün4",],
+			datasets: [{
+				label: 'Toplam Satış',
+				data: [800, 10000, 750, 100],
+				backgroundColor: [
+					'rgba(255, 99, 132, 0.2)',
+					'rgba(54, 162, 235, 0.2)',
+					'rgba(255, 206, 86, 0.2)',
+					'rgba(75, 192, 192, 0.2)',
+
+				],
+				borderColor: [
+					'rgba(255, 99, 132, 1)',
+					'rgba(54, 162, 235, 1)',
+					'rgba(255, 206, 86, 1)',
+					'rgba(75, 192, 192, 1)',
+
+				],
+				borderWidth: 2
+			}]
+		},
+		options: {
+			responsive: true,
+			maintainAspectRatio: false,
+
+			plugins: {
+				legend: {
+					position: 'top',
+				},
+				tooltip: {
+					callbacks: {
+						label: function (context) {
+							let label = context.label || '';
+							if (label) {
+								label += ': ';
+							}
+							if (context.parsed !== null) {
+								label += new Intl.NumberFormat('tr-TR', { style: 'currency', currency: 'TRY' }).format(context.parsed);
+							}
+							return label;
+						}
+					}
+				}
+			}
+		}
+	});
 
 
 </script>
